# tts-external-api

./: Cargo.toml  README.md
examples/: test.rs
src/: error.rs  lib.rs  messages.rs  tcp.rs
