[package]
name = "tts-external-api"
version = "0.1.1"
authors = ["LucasOe"]
edition = "2021"
description = "Rust implementation of the External Editor API for Tabletop Simulator"
repository = "https://github.com/LucasOe/tts-external-api"
documentation = "https://docs.rs/tts-external-api/"
readme = "README.md"
license = "MIT"
keywords = ["tabletop-simulator", "tts", "external-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.38"
